Create table query handled

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
 all: exec.o
 
 exec.o:
-	g++ query_processing.cpp file.cpp query.cpp
+	g++ query_processing.cpp file.cpp query.cpp metadata.cpp type.cpp -o exec.o
