frontend backend linked

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
 all: exec.o
 
-exec.o:
-	g++ query_processing.cpp query_select.cpp file.cpp query.cpp metadata.cpp type.cpp -o exec.o
+exec.o:server.cpp query_select.cpp arithmetic_expr.cpp file.cpp query.cpp metadata.cpp type.cpp  token.cpp data.cpp
+	g++ server.cpp query_select.cpp arithmetic_expr.cpp file.cpp query.cpp metadata.cpp type.cpp  token.cpp data.cpp  -o exec.o
