--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
 all: exec.o
 
-exec.o: server.cpp query_select.cpp arithmetic_expr.cpp file.cpp query.cpp metadata.cpp type.cpp token.cpp data.cpp
-	g++ -pthread server.cpp query_select.cpp arithmetic_expr.cpp file.cpp query.cpp metadata.cpp type.cpp token.cpp data.cpp  -o exec.o
+exec.o: query_processing.cpp query_select.cpp arithmetic_expr.cpp file.cpp query.cpp metadata.cpp type.cpp token.cpp data.cpp
+	g++ query_processing.cpp query_select.cpp arithmetic_expr.cpp file.cpp query.cpp metadata.cpp type.cpp token.cpp data.cpp  -o exec.o
